# hermes-sts-server

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-settings-persistence.txt  task-1-tdd-red-pytest.txt  task-1-validate-memory-provider.txt  task-1-validate-tavily-timeout.txt  task-2-config-override.txt  task-2-memory-hit-frozen.txt  task-3-bug1-pytest.txt  task-3-tavily-failure.txt  task-4-bug2-timeout.txt  task-4-fts5-detect.txt  task-5-ov-stats-degraded.txt  task-5-record-eturn-fast.txt
.sisyphus/plans/: context-coherence.md  direct-llm-memory-mode.md
admin_ui/: index.html  package-lock.json  package.json  tailwind.config.js
admin_ui/src/: main.tsx  styles.css
hermes_sts/: __main__.py  admin.py  audio.py  config.py  config_store.py  conversation_store.py  hermes.py  llm.py  memory.py  persona.py  realtime.py  server.py  singleton.py  stt.py  tools.py  tts.py  vad.py  websearch.py
scripts/: README.md  Start Hermes STS Pipeline.bat  bootstrap_fedora_amd.sh  configure_reachy_conversation_env.ps1  download_models.ps1  download_models.sh  install_user_service.sh  run_tests.ps1  run_tests.sh  setup_venv.ps1  setup_venv.sh  start_sts_pipeline.ps1  start_sts_pipeline.sh  stop_sts_pipeline.ps1  stop_sts_pipeline.sh  ws_turn_smoke.py
scripts/dev/: download_models.sh  setup_venv.sh
scripts/omnivoice/: bench_omnivoice_lab.sh  setup_omnivoice_lab.sh  (+1 more)
tests/: test_conversation_store.py  test_core.py  test_llm_user_field.py  test_memory_websearch.py  test_realtime_memory.py
(+25 files in other folders)
