[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-sts-server"
version = "0.1.0"
description = "Isolated local STS server for Reachy Mini Conversation App and Hermes Agent"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "websockets>=12",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "numpy>=1.26,<2",
]

[project.optional-dependencies]
funasr = [
  "funasr-onnx==0.4.1",
]
sherpa = [
  "sherpa-onnx==1.13.2",
]
whisper = [
  "faster-whisper==1.2.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["hermes_sts*"]
exclude = ["logs*", "models*", "scripts*"]
